3.3.1
	+ Module manages Roundcube htaccess. Max upload file size is now got from
	  the mail module. Also added a default timezone to avoid Roundcube warning
3.3
	+ Non localhost IPs are used in the Roundcube config file
	+ Added missing EBox::Exceptions uses
	+ Integration with the OpenChange module
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.2
	+ Disable roundcube spellchecker which is not working and already provided
	  by the browsers
3.1.1
	+ Added menu icon
3.1
	+ Depend on zentyal-core 3.1
3.0.1
	+ When using virtual host the webmail interface is available at
	  the virtual host root
2.3.3
	+ Use full path for notifier of notifyActions. More restrictive
	  notifyForeignModelAction()
2.3.2
	+ Fixed syntax of notifyactions in yaml schema
2.3.1
	+ Adapted to new Model management framework
2.3
	+ Store roundcube database in MySQL instead of PostgreSQL
	+ Replaced autotools with zbuildtools
2.1.3
	+ Removed /zentyal prefix from URLs
2.1.2
	+ Integration with roundcube 0.5.3
	+ Fixed argument passing in constructor, readonly instances now work
2.1.1
	+ Make mail and webserver enabledepends instead of depends
	+ Bugfix: not fail when saving changes without IMAP or IMAPS but the
	  module is disabled
	+ Don't write web configuration files if the module is disabled
	+ Changed to alias setup instead of symlink
2.1
	+ Use new standard enable-module script
	+ Use new initial-setup in postinst
1.5.2
	+ Zentyal rebrand
1.5.1
	+ Adds integration between ebox-webserver virtual hosts and
	  ebox-webmail.
1.5
	+ Support for postgresql 8.4 (lucid)
	+ Removed unsuported character from autogenerated key. Thanks to
	  servisoft for pointing this out
1.3.15
	+ managesieve plugin configuration file stored in /etc to shield
	  it from package upgrades
1.3.14
	+ Bugfix: assure cache is disabled when using a localhost
	  server. This is neccesary or otherwise we will be bitten for
	  roundcube check new email bug
1.3.13
	+ Change menu name to keep folder open