@@ -1,3 +1,5 @@
+HEAD
+	+ Make sure the MySQL conf file is correct before configure
 3.3.1
 	+ Module manages Roundcube htaccess. Max upload file size is now got from
 	  the mail module. Also added a default timezone to avoid Roundcube warning
